acvus-mir-test/tests/snapshots/e2e__range_iteration.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     4 |   r1 = range 0 (r2)..3 (r3)
     5 |   r4 = cast RangeToList r1
     8 |   jump L0(0 (r5), T0, r0)
     9 | L0(r6: Int, r7: String, r8: Int):
    10 |   list_step r9, r10 = r4[r6] else L1(r7)
    11 | L3:
    13 |   r11 = call #0(r9)
    14 |   r12 = T0 + r11
    15 |   r13 = r7 + r12
    16 |   jump L0(r10, r13, r9)
    17 | L1(r14: String):
    18 |   jump L2(r14)
    19 | L2(r15: String):
    20 |   r16 = T0 + r15
    21 |   return r16

    ; r0 (v23) : Int
    ; r1 (v4) : Range
    ; r2 (v2) : Int
    ; r3 (v3) : Int
    ; r4 (v5) : List<Int>
    ; r5 (v6) : Int
    ; r6 (v8) : Int
    ; r7 (v9) : String
    ; r8 (v24) : Int
    ; r9 (x) : Int
    ; r10 (v11) : Int
    ; r11 (to_string(...)) : String
    ; r12 (v18) : String
    ; r13 (v19) : String
    ; r14 (v20) : String
    ; r15 (v21) : String
    ; r16 (v22) : String
    ; r17 (v14) : String
    ; r18 (v7) : String
    ; r19 (v15) : Ref<Int>
    ; r20 (v13) : Ref<Int>
    ; r21 (v1) : String
    ; r22 (x) : Int
