acvus-mir-test/tests/snapshots/e2e__range_pattern.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "child"
  T2 = "teen"
  T3 = "adult"

=== main ===
     1 |   r0 = ref @age
     2 |   r1 = load r0
     3 | L2:
     4 |   r2 = test r1 in 0..10
     5 |   jump_if r2 then L4 else L3
     6 | L4:
     9 |   r3 = T0 + T1
    10 |   jump L0(r3)
    11 | L3:
    12 |   r4 = test r1 in 10..=19
    13 |   jump_if r4 then L5 else L1
    14 | L5:
    17 |   r5 = T0 + T2
    18 |   jump L0(r5)
    19 | L1:
    22 |   r6 = T0 + T3
    23 |   jump L0(r6)
    24 | L0(r7: String):  ; merge_of L2
    25 |   r8 = T0 + r7
    26 |   return r8

    ; r0 (@age) : Ref<Int>
    ; r1 (v3) : Int
    ; r2 (v4) : Bool
    ; r3 (v7) : String
    ; r4 (v8) : Bool
    ; r5 (v11) : String
    ; r6 (v14) : String
    ; r7 (v15) : String
    ; r8 (v16) : String
    ; r9 (v6) : String
    ; r10 (v9) : String
    ; r11 (v1) : String
    ; r12 (v12) : String
    ; r13 (v10) : String
    ; r14 (v13) : String
    ; r15 (v5) : String
