acvus-mir-test/tests/snapshots/e2e__script_if_expr.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   if true (r0) -> L0 else L2 join L1
     2 | L0:
     4 |   jump L1(1 (r1))
     5 | L2:
     7 |   jump L1(2 (r2))
     8 | L1(r3: i64):
     9 |   assign x = r3
    10 |   r4 = take x
    11 |   return r4

    ; r0 (v1) : Bool
    ; r1 (v2) : i64
    ; r2 (v3) : i64
    ; r3 (v4) : i64
    ; r4 (x) : i64
    ; r5 (x) : i64
