acvus-mir-test/tests/snapshots/e2e__script_if_let_expr.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   r0 = variant Some(42 (r1))
     2 |   r2 = test r0 is Some
     3 |   jump_if r2 then L0 else L2
     4 | L0:
     5 |   r3 = unwrap r0
     6 |   r4 = ref v
     7 |   store r4 = r3
     8 |   r5 = ref v
     9 |   r6 = load r5
    10 |   jump L1(r6)
    11 | L2:
    13 |   jump L1(0 (r7))
    14 | L1(r8: Int):
    15 |   r9 = ref x
    16 |   store r9 = r8
    17 |   r10 = ref x
    18 |   r11 = load r10
    19 |   return r11

    ; r0 (v2) : Option<Int>
    ; r1 (v1) : Int
    ; r2 (v3) : Bool
    ; r3 (v) : Int
    ; r4 (v6) : Ref<Int>
    ; r5 (v7) : Ref<Int>
    ; r6 (v) : Int
    ; r7 (v9) : Int
    ; r8 (v10) : Int
    ; r9 (v12) : Ref<Int>
    ; r10 (v13) : Ref<Int>
    ; r11 (x) : Int
