acvus-mir-test/tests/snapshots/e2e__script_if_no_else.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   assign x = 0 (r0)
     3 |   jump_if true (r1) then L0 else L1
     4 | L0:
     6 |   assign x = 1 (r2)
     7 |   jump L1
     8 | L1:
    10 |   r3 = take x
    11 |   return r3

    ; r0 (v1) : Int
    ; r1 (v3) : Bool
    ; r2 (v4) : Int
    ; r3 (x) : Int
    ; r4 (v5) : Unit
