acvus-mir-test/tests/snapshots/e2e__script_let_assign.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 2792
expression: ir
---
=== main ===
     1 |   assign x = 1 (r0)
     3 |   assign x = 2 (r1)
     4 |   r2 = take x
     5 |   return r2

    ; r0 (v1) : Int
    ; r1 (v3) : Int
    ; r2 (x) : Int
    ; r3 (x) : Int
