acvus-mir-test/tests/snapshots/e2e__script_let_bind.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   assign x = 1 (r0)
     2 |   r1 = take x
     3 |   return r1

    ; r0 (v1) : Int
    ; r1 (x) : Int
