acvus-mir-test/tests/snapshots/e2e__script_while_let.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   r0 = variant Some(1 (r1))
     2 |   assign x = r0
     4 |   assign result = 0 (r2)
     5 |   jump L0
     6 | L0:
     7 |   r3 = take x
     8 |   r4 = test r3 is Some
     9 |   jump_if r4 then L1 else L2
    10 | L1:
    11 |   r5 = unwrap r3
    12 |   assign v = r5
    13 |   r6 = take v
    14 |   assign result = r6
    15 |   r7 = variant None
    16 |   assign x = r7
    17 |   jump L0
    18 | L2:
    19 |   r8 = take result
    20 |   return r8

    ; r0 (v2) : Option<Int>
    ; r1 (v1) : Int
    ; r2 (v4) : Int
    ; r3 (x) : Option<Int>
    ; r4 (v7) : Bool
    ; r5 (v) : Int
    ; r6 (v) : Int
    ; r7 (v11) : Option<Int>
    ; r8 (result) : Int
